2008-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
   src/filetypes.c:
   Fix Doxygen 1.5.4 undocumented parameter warnings.
   Improve dox for sciwrappers.c.
   Correct sci_grap_focus() misspelling.
   (Merged from split-window-plugin branch).
 * doc/plugins.dox:
   Fix wrong parameter for "project-close" signal.
   (Merged from split-window-plugin branch).
 * src/geanyobject.c, src/geanyobject.h, src/document.c,
   doc/plugins.dox:
   Add plugin signal "document-close", sent just before a document is
   closed.
   (Merged from split-window-plugin branch).
 * src/plugindata.h, src/plugins.c, src/editor.c, src/editor.h,
   po/POTFILES.in, plugins/splitwindow.c, plugins/Makefile.am,
   plugins/makefile.win32:
   Merge split-window-plugin branch.
   Add Split Window plugin (should work OK for viewing and basic text
   editing; most other features are not implemented yet).
   Add editor_create_widget() to the API.


2008-09-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Show ellipsis (...) item when there are too many symbol names for
   autocompletion.
 * src/editor.c:
   Apply patch from Jason Oster to highlight matching brace indent
   guides (thanks, #2104099).
 * doc/geany.txt, doc/geany.html:
   s/auto detect/auto-detect.
   Minor formatting fixes.


2008-09-14 Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * COPYING: Fixing a little encoding issue in GPL text.
 * po/tr.po, po/LINGUAS, src/about.c, THANKS: Adding Turkish translation
   provided by Gürkan Gür. Thanks for it.


2008-09-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   When checking for starting auto completion always use the style
   of the previous character and remove possible error indicator styles
   which caused wrong checking (should fix #2058005).


2008-09-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
