@@ -47,6 +47,7 @@ Robert McGinley <mcginleyr1(at)gmail(dot)com> - Documentation improvements
 Felipe Pena <felipensp(at)gmail(dot)com> - Missing PHP keywords
 Colomban Wendling <colombanw(at)users(dot)sourceforge(dot)net> - GLSL filetype patch
 Timothy Boronczyk <tboronczyk(at)gmail(dot)com> - scroll_stop_at_last_line GUI pref patch
+Jason Oster <parasytic(at)users(dot)sourceforge(dot)net> - various patches
 
 Translators:
 ------------
