@@ -280,8 +280,12 @@ on_undo1_activate                      (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
 	GeanyDocument *doc = document_get_current();
+
 	if (doc != NULL && document_can_undo(doc))
+	{
+		SSM(doc->editor->sci, SCI_CANCEL, 0, 0);
 		document_undo(doc);
+	}
 }
 
 
@@ -290,8 +294,12 @@ on_redo1_activate                      (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
 	GeanyDocument *doc = document_get_current();
+
 	if (doc != NULL && document_can_redo(doc))
+	{
+		SSM(doc->editor->sci, SCI_CANCEL, 0, 0);
 		document_redo(doc);
+	}
 }
 
 
