@@ -1,3 +1,10 @@
+2008-09-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/callbacks.c, THANKS:
+   Cancel autocompletion on Undo/Redo (based on a patch by Jason Oster,
+   thanks; #2102715).
+
+
 2008-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
